# iris_fastapi

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  utils.py
tests/: test_main.py
