[tool.poetry]
name = "iris_fastapi_demo"
version = "0.1.1"
description = ""
authors = ["Dmitry Drozdov <dinochrom1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
